--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 78fd25a0-e6df-11ec-9428-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇨🇳 台湾-4.07MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-540.4KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.69MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-344.7KB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
-  - {name: 🇺🇸 美国-410.9KB/s(Youtube:不良林), server: sg01.czsx1624.tk, port: 443, type: vmess, uuid: d002b422-eace-4e01-bf58-e4bb0bcfe7af, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /3a8545177/, ws-headers: {Host: sg01.czsx1624.tk}}
-  - {name: 🇨🇳 中国-420.9KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk6702.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.50MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
+  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-7.14MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-309.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.70MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.90MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.51MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-540.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-344.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.9KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
+      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
