--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: cmbe3-vdn.zhs.company, port: 35055, type: vmess, uuid: 1196c95e-16b4-3a86-b12a-33b8c3417dda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /zhs, ws-headers: {Host: cmbe3-vdn.zhs.company}}
-  - {name: 🇺🇸 美国-5.06MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-7.14MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-309.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.70MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇮🇳 印度-3.02MB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.90MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.51MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 0001.us.genzpn.com, port: 80, type: vmess, uuid: 568a40cb-6c4b-4bd3-a80f-a5233529817b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 0001.us.genzpn.com}}
+  - {name: 🇨🇳 台湾-1.57MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇩🇪 德国-1.08MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-255.5KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-347.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-4.80MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-984.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-350.3KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: us.vless.fun, port: 443, type: trojan, password: password, sni: us.vless.fun, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.06MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-7.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-309.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.70MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.57MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-984.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-350.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
