--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.24MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 未知国家-350.3KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇨🇳 中国-347.8KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.85MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-255.5KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.62MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.94MB/s(Youtube:不良林), server: cdn1.myuuusss.com, port: 30041, type: ss, cipher: chacha20-ietf-poly1305, password: b195963c-2631-442d-ab3a-6e78df25d904}
-  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-542.0KB/s(Youtube:不良林), server: jpaws002.xmrth-node.xyz, port: 15665, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaws002.xmrth-node.xyz}}
-  - {name: 🇯🇵 日本-4.17MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
+  - {name: 🇨🇳 中国-1.68MB/s(Youtube:不良林), server: cdn1.myuuusss.com, port: 30041, type: ss, cipher: chacha20-ietf-poly1305, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.64MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇮🇳 印度-340.2KB/s(Youtube:不良林), server: jgwhdlb4.gaox.ml, port: 443, type: trojan, password: 081a4198-d664-4bc5-a7c6-e35982da964b, sni: jgwhdlb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.29MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.24MB/s(Youtube:不良林)
-      - 未知国家-350.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-542.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.64MB/s(Youtube:不良林)
+      - 🇮🇳 印度-340.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
